fix: corrigindo rota /health